--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>Directions</h2>
     <p>You'll find us right in the centre of downtown Webville. 
         If you need help finding us, check out 
-        our <a href="../about/directions.md"> detaled directions</a> 
+        our <a href="about/directions.md"> detaled directions</a> 
         Come join us!
     </p>
 
