--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <img src="../images/drinks.jpg" >
 
     <p>
-        Join us any evening for refreshing <a href="../beverages/elixir.html">elixirs</a>,
+        Join us any evening for refreshing <a href="beverages/elixir.html">elixirs</a>,
         conversation and maybe a game or two of 
         <em>Dance Dance Revolution</em>. 
         Wireless access is always provided;
